--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -335,11 +335,11 @@ comment:
   config:
     # Waline 评论系统。参见 https://waline.js.org/
     waline:
-      serverUrl: https://example.example.com # Waline 服务器 URL。例如 https://example.example.com
+      serverUrl: https://xzblogs-waline.vercel.app # Waline 服务器 URL。例如 https://example.example.com
       lang: zh-CN # Waline 语言。例如 zh-CN, en-US。参见 https://waline.js.org/guide/client/i18n.html
       emoji: [] # Waline 表情，参见 https://waline.js.org/guide/features/emoji.html
       recaptchaV3Key: # Google reCAPTCHA v3 密钥。参见 https://waline.js.org/reference/client/props.html#recaptchav3key
-      turnstileKey: # Turnstile 密钥。参见 https://waline.js.org/reference/client/props.html#turnstilekey
+      turnstileKey: 0x4AAAAAAAyl7_vy5YtZ2pP1 # Turnstile 密钥。参见 https://waline.js.org/reference/client/props.html#turnstilekey
       reaction: false # Waline 反应。参见 https://waline.js.org/reference/client/props.html#reaction
     # Gitalk 评论系统。参见 https://github.com/gitalk/gitalk
     gitalk:
