--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -335,7 +335,7 @@ comment:
   config:
     # Waline 评论系统。参见 https://waline.js.org/
     waline:
-      serverUrl: https://xzblogs-waline.vercel.app # Waline 服务器 URL。例如 https://example.example.com
+      serverUrl: https://waline.xiaozhao.blog # Waline 服务器 URL。例如 https://example.example.com
       lang: zh-CN # Waline 语言。例如 zh-CN, en-US。参见 https://waline.js.org/guide/client/i18n.html
       emoji: [] # Waline 表情，参见 https://waline.js.org/guide/features/emoji.html
       recaptchaV3Key: # Google reCAPTCHA v3 密钥。参见 https://waline.js.org/reference/client/props.html#recaptchav3key
