--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,8 @@ auto_title: false  # 是否自动根据路径生成标题
 auto_date: false   # 是否自动使用当前时间作为日期
 force: false       # 强制模式，忽略缓存
 
+all_minifier: true
+
 # Directory
 source_dir: source
 public_dir: public
@@ -125,3 +127,12 @@ theme: redefine
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+
+
+mathjax:
+  tags: none               # or 'ams' or 'all'
+  single_dollars: true     # enable single dollar signs as in-line math delimiters
+  cjk_width: 0.9           # relative CJK char width
+  normal_width: 0.6        # relative normal (monospace) width
+  append_css: true         # add CSS to every page
+  every_page: false        # if true, every page will be rendered by mathjax regardless the `mathjax` setting in Front-matter of each article
